# tguard

./: .gitignore  Cargo.toml  LICENSE  README.md  cors_config.json  docker-compose.yml  setup.sh
backend/: Cargo.toml  db.sql
backend/src/: config.rs  confirm_message.txt  email.rs  error.rs  id.rs  main.rs  message.txt  receive.rs  sentry.rs  sign.rs  storage.rs
common/: Cargo.toml
common/src/: lib.rs
docker/: irma.Dockerfile  nginx.conf  rust.Dockerfile
frontend/: Cargo.toml  index.html  package.json
frontend/script/: irma.js  js_functions.js
frontend/src/: actions.rs  attributes.rs  components.rs  decrypt.rs  entities.rs  ibs.rs  js_functions.rs  lib.rs  main.rs  mime.rs  types.rs
frontend/src/components/: common.rs  index.rs  layout.rs  receive_form.rs  send_form.rs  upload.rs
frontend/src/components/common/: alert.rs  loader.rs  title.rs
frontend/src/components/send_form/: attribute_header_row.rs  attribute_input.rs  recipient_row.rs
frontend/static/: irma.bundle.min.js  irma.min.css
frontend/style/: style.scss
frontend/tests/: wasm.rs
sigverify/: go.mod  go.sum  main.go
